<resources>
    <string name="app_name">Holliston High</string>
    <string name="about_app_name">Holliston High School</string>
    <string name="about_version">Version </string>
    <string name="about_author">Designed and Coded by Tom Reeve</string>
    <string name="about_done">OK</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh data</string>
    <string name="loading">Loading data...</string>

    <!-- Nav Drawer Menu Items -->
    <string name="nav_home">Home</string>
    <string name="nav_news">News</string>
    <string name="nav_dailyann">PA Announcements</string>
    <string name="nav_events">Events</string>
    <string name="nav_schedules">Schedules</string>
    <string name="nav_lunch">Lunch Menus</string>
    <string name="nav_sports">Sports Schedules</string>
    <string name="nav_website">HHS Website</string>
    <string name="nav_social">HHS Social Media</string>
    <string name="nav_about">App Info</string>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="xml_error">Error with data download</string>
    <string name="all_day">All day</string>
    <string name="disclosure_icon">More</string>
    <string name="no_lunch">No lunch menu posted</string>
    <string name="news_highlight_image">News Highlight Photo</string>
    <string name="widget_header">HHS Schedule</string>
    <string name="school_street_sign">HHS Street Sign</string>
    <string name="posted">Posted</string>

    <string name="this_week">This Week</string>
    <string name="next_week">Next Week</string>
    <string name="farther">Farther Ahead</string>
    <string name="last_week">Last Week</string>
    <string name="earlier">Earlier</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>

    <!-- Layout Strings -->
    <string name="schedule_title_single">Schedule</string>
    <string name="schedule_title_plural">Schedules</string>
    <string name="schedule_next">Next Schedule</string>
    <string name="daily_ann_title">PA Announcements</string>
    <string name="news_title">News</string>
    <string name="event_title_plural">Upcoming Events</string>
    <string name="lunch_title_single">Lunch Menu</string>
    <string name="lunch_title_plural">Lunch Menus</string>
    <string name="social_title">Social Media</string>
    <string name="checking">Checking for updates</string>
    <string name="please_refresh">Please connect to a network and choose Refresh from the menu.</string>
    <string name="events_no_details">No additional details posted for this event.</string>

    <!-- Link Labels -->
    <string name="hhs_facebook_label">on Facebook</string>
    <string name="hhs_twitter_label">on Twitter</string>
    <string name="hhs_googleplus_label">on Google+</string>
    <string name="hhs_instagram">on Instagram</string>
    <string name="hhs_youtube">on YouTube</string>
    <string name="hhs_home_page">http://hhs.holliston.k12.ma.us</string>
    <string name="hhs_sports_page">http://hhsathletics.holliston.k12.ma.us/schedules</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scene_from_holliston_high">appbar_img_descr</string>
    <string name="news_article_thumbnail_txt">news article thumbnail</string>
    <string name="schedule_icon_text">schedule icon</string>
    <string name="bullhorn_icon">bullhorn icon</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

</resources>
