<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="info.holliston.high.app.fragment.AboutFragment">

        <TextView
            android:id="@+id/about_app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_app_name"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_title" />

        <TextView
            android:id="@+id/about_app_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_version"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_subheading" />

        <TextView
            android:id="@+id/about_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_author"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_body_1" />
    </LinearLayout>

