<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/today_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/card_date"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:textAlignment="textStart"
                android:textSize="@dimen/text_size_title" />

            <RelativeLayout
                android:id="@+id/today_rel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/dailyann_linear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/card_dailyann_icon"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dailyann_icon"
                        android:layout_weight="1"
                        android:contentDescription="@string/bullhorn_icon"
                        android:visibility="gone"
                        app:srcCompat="@drawable/ic_announcements" />

                    <TextView
                        android:id="@+id/card_dailyann_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:textAlignment="center"
                        android:textSize="12sp"
                        android:visibility="gone" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/card_schedule_icon"
                    android:layout_width="@dimen/home_sched_icon"
                    android:layout_height="@dimen/home_sched_icon"
                    android:layout_alignParentEnd="false"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="false"
                    android:layout_gravity="top|center_horizontal"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/schedule_icon_text"
                    app:srcCompat="@drawable/star_lg" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="false"
                    android:layout_margin="10dp"
                    android:layout_toEndOf="@+id/card_schedule_icon"
                    android:layout_toStartOf="@+id/dailyann_linear"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/card_schedule"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/loading"
                        android:textAlignment="textStart"
                        android:textSize="@dimen/text_size_subheading"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/card_lunch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="textStart"
                        android:textSize="@dimen/text_size_body_1" />

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

</android.support.v7.widget.CardView>